# io-uring

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  sys_loongarch64.rs
.github/workflows/: ci.yml  kernel-version-test.yml  release.yml  rust.yml
benches/: iovec.rs  nop.rs
examples/: readme.rs  readv.rs  tcp_echo.rs  tcp_echo_buf_ring.rs
examples/loom-ringbuf/: main.rs
io-uring-bench/: Cargo.toml
io-uring-bench/src/: iai_new_nop.rs  iovec.rs  nop.rs
io-uring-test/: Cargo.toml
io-uring-test/src/: helper.rs  main.rs  ownedsplit.rs  utils.rs
io-uring-test/src/tests/: api.rs  cancel.rs  epoll.rs  fs.rs  futex.rs  mod.rs  net.rs  os.rs  pipe.rs  poll.rs  queue.rs  register.rs  register_buf_ring.rs  register_buffers.rs  register_napi.rs  register_sync_cancel.rs  regression.rs  sqpoll.rs  timeout.rs
linux-io-uring/: Cargo.toml
linux-io-uring-sys/: Cargo.toml  build.rs
linux-io-uring-sys/src/: lib.rs  sys.rs
linux-io-uring/src/: cqueue.rs  lib.rs  mmap.rs  opcode.rs  queue.rs  squeue.rs  util.rs
loom-ringbuf/: Cargo.toml  main.rs  ring.rs
src/: buf_ring.rs  cqueue.rs  lib.rs  opcode.rs  ownedsplit.rs  register.rs  squeue.rs  submit.rs  types.rs  util.rs
src/concurrent/: cqueue.rs  mod.rs  squeue.rs
src/ownedsplit/: mod.rs
src/sys/: mod.rs  sys.rs  sys_aarch64.rs  sys_loongarch64.rs  sys_mips64.rs  sys_powerpc64.rs  sys_x86.rs  sys_x86_64.rs
tests/: basic.rs  cancel.rs  conc.rs  cqueue_test.rs  dontfork.rs  eventfd.rs  eventfd_test.rs  fs.rs  fs_test.rs  fs_test_conc.rs  link.rs  pipe.rs  poll.rs  poll_test.rs  register.rs  register_test.rs  single_mmap_test.rs  sqpoll_test.rs  squeue_flags_test.rs  squeue_test.rs  tcp.rs  tcp_test.rs  tests.rs  timeout.rs  timeout_test.rs
tests/common/: ioop.rs  mod.rs
tests/tests/: fs.rs  queue.rs
