[package]
name = "io-uring"
version = "0.5.13"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/io-uring"
homepage = "https://github.com/tokio-rs/io-uring"
documentation = "https://docs.rs/io-uring"
description = "The low-level `io_uring` userspace interface for Rust"
categories = [ "asynchronous", "network-programming", "filesystem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = []
members = [ "io-uring-test", "io-uring-bench" ]

[features]
default = ["std"]
std = ["rustix/std"]

[dependencies]
libc = { version = "0.2.98", default-features = false }
rustix = { git = "https://github.com/jordanisaacs/rustix.git", branch = "iouring-flags", default-features = false, features = ["io_uring", "mm", "time"] }

[dev-dependencies]
anyhow = "1"
socket2 = "0.4"
slab = "0.4"
