[package]
name = "io-uring"
version = "0.6.3"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/io-uring"
homepage = "https://github.com/tokio-rs/io-uring"
documentation = "https://docs.rs/io-uring"
description = "The low-level `io_uring` userspace interface for Rust"
categories = [ "asynchronous", "network-programming", "filesystem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = []
members = [ "io-uring-test", "io-uring-bench" ]

[features]
overwrite = [ "bindgen" ]
direct-syscall = [ "sc" ]
io_safety = []

[dependencies]
# Since we need to work on rustc 1.48, we cannot use 2021 edition.
bitflags = "1"

libc = { version = "0.2.98", default-features = false }
sc = { version = "0.2", optional = true }

[build-dependencies]
bindgen = { version = "0.65", optional = true }

[dev-dependencies]
anyhow = "1"
socket2 = "0.5"
slab = "0.4"
