[package]
name = "io-uring-bench"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
io-uring = { path = ".." }
criterion = "0.3"
tempfile = "3"

[[bench]]
name = "nop"
path = "src/nop.rs"
harness = false

[[bench]]
name = "iovec"
path = "src/iovec.rs"
harness = false
