[package]
name = "io-uring-bench"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = { path = ".." }
iou = "0.3"
uring-sys = "0.7"
criterion = "0.3"
iai = "0.1"
tempfile = "3"

[[bench]]
name = "nop"
path = "src/nop.rs"
harness = false

[[bench]]
name = "iovec"
path = "src/iovec.rs"
harness = false

[[bench]]
name = "iai_new_nop"
path = "src/iai_new_nop.rs"
harness = false
