[package]
name = "io-uring-test"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = { path = ".." }
libc = "0.2"
anyhow = "1"
tempfile = "3"
once_cell = "1"
socket2 = "0.3"

[features]
default = [ "direct-syscall" ]
direct-syscall = [ "io-uring/direct-syscall" ]
