[package]
name = "io-uring-test"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = { path = ".." }
libc = { version = "0.2", features = [ "extra_traits" ] }
anyhow = "1"
tempfile = "3"
once_cell = "1"
socket2 = "0.4"

[features]
direct-syscall = [ "io-uring/direct-syscall" ]
ci = []
