[package]
name = "linux-io-uring-sys"
version = "0.0.2"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/linux-io-uring"
homepage = "https://github.com/quininer/linux-io-uring"
documentation = "https://docs.rs/linux-io-uring"
description = "The `io_uring` bindings for Rust."
categories = [ "asynchronous", "network-programming", "filesystem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
overwrite = [ "bindgen" ]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.51", optional = true }
